# ai-hackathon-samples

./: .gitignore  README.md
git-happens/: README.md  pyproject.toml
git-happens/src/git_happens/: __init__.py
grimoire-guardian/: README.md  pyproject.toml
grimoire-guardian/src/grimoire_guardian/: __init__.py  app.py  sysprompt.txt
stormy-mcweatherface/: README.md  get_weather.py  pyproject.toml
stormy-mcweatherface/src/stormy_mcweatherface/: __init__.py  gradio_app.py  stormy.py
